# svelte-wasm-template

./: README.md  create-svalte-wasm-project.sh
svelte-wasm-bundle/: package-lock.json  package.json  rollup.config.js
svelte-wasm-bundle/public/css/: global.css
svelte-wasm-bundle/public/js/: bundle.js
svelte-wasm-bundle/src/: App.svelte  main.ts
svelte-wasm-bundle/src/wasm-module/: Cargo.toml
svelte-wasm-normal/: package-lock.json  package.json  rollup.config.js
svelte-wasm-normal/public/: index.html
svelte-wasm-normal/public/css/: bundle.css
svelte-wasm-normal/public/js/: bundle.js
svelte-wasm-normal/public/wasm/: wasm_module_bg.wasm
svelte-wasm-normal/src/: main.ts
svelte-wasm-normal/src/wasm-module/src/: lib.rs
