[package]
name = "wasm-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
wee_alloc = { version = "0.4.5", optional = true }

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
